extends Control
## DashboardScreen - ê²Œì„ ìƒíƒœ ëŒ€ì‹œë³´ë“œ
## ë‹¤ìŒ ê²½ê¸°, ì„ ìˆ˜ ìƒíƒœ, íŒ€ ìƒíƒœë¥¼ í•œëˆˆì— í‘œì‹œ
##
## ì‘ì„±ì¼: 2025-11-26
## ì°¸ì¡°: 04_ui_design_system.md

signal screen_changed(screen_name: String)

# ============================================
# UI ë…¸ë“œ ì°¸ì¡°
# ============================================

@onready var title_label: Label = $Header/TitleLabel
@onready var week_label: Label = $Header/WeekLabel

# ìœ„ì ¯ ì»¨í…Œì´ë„ˆ
@onready var widgets_grid: GridContainer = $Content/WidgetsGrid
@onready var next_match_widget: PanelContainer = $Content/WidgetsGrid/NextMatchWidget
@onready var player_status_widget: PanelContainer = $Content/WidgetsGrid/PlayerStatusWidget
@onready var team_stats_widget: PanelContainer = $Content/WidgetsGrid/TeamStatsWidget
@onready var quick_actions_widget: PanelContainer = $Content/WidgetsGrid/QuickActionsWidget

# ë¹ ë¥¸ ì•¡ì…˜ ë²„íŠ¼
@onready var training_button: Button = $Footer/QuickButtons/TrainingButton
@onready var match_button: Button = $Footer/QuickButtons/MatchButton
@onready var gacha_button: Button = $Footer/QuickButtons/GachaButton
@onready var tactics_button: Button = $Footer/QuickButtons/TacticsButton

# ============================================
# ë””ìì¸ ì‹œìŠ¤í…œ ìƒ‰ìƒ
# ============================================

const COLOR_BG_PRIMARY = Color("#0D1117")
const COLOR_BG_SECONDARY = Color("#161B22")
const COLOR_BG_ELEVATED = Color("#30363D")
const COLOR_ACCENT_PRIMARY = Color("#238636")
const COLOR_ACCENT_SECONDARY = Color("#1F6FEB")
const COLOR_ACCENT_WARNING = Color("#D29922")
const COLOR_ACCENT_DANGER = Color("#DA3633")
const COLOR_TEXT_PRIMARY = Color("#E6EDF3")
const COLOR_TEXT_SECONDARY = Color("#8B949E")

# ì»¨ë””ì…˜ ìƒ‰ìƒ
const CONDITION_COLORS = {
	"ì ˆí˜¸ì¡°": Color("#FF4444"),  # ë¹¨ê°•
	"í˜¸ì¡°": Color("#FFD700"),  # ë…¸ë‘
	"ë³´í†µ": Color("#FFFFFF"),  # í°ìƒ‰
	"ë¶€ì§„": Color("#6699FF"),  # íŒŒë‘
	"ì ˆë¶€ì§„": Color("#9966FF")  # ë³´ë¼
}

# ë„¤ë¹„ë°” ì”¬
const MainNavBarScene = preload("res://scenes/components/MainNavBar.tscn")

# ============================================
# ì´ˆê¸°í™”
# ============================================


func _ready() -> void:
	_connect_signals()
	_setup_ui()
	_update_all_widgets()
	_add_navigation_bar()
	print("[DashboardScreen] Initialized")


func _connect_signals() -> void:
	# ë¹ ë¥¸ ì•¡ì…˜ ë²„íŠ¼
	if training_button:
		training_button.pressed.connect(_on_training_pressed)
	if match_button:
		match_button.pressed.connect(_on_match_pressed)
	if gacha_button:
		gacha_button.pressed.connect(_on_gacha_pressed)
	if tactics_button:
		tactics_button.pressed.connect(_on_tactics_pressed)

	# ë§¤ë‹ˆì € ì‹œê·¸ë„ ì—°ê²°
	if ConditionSystem:
		ConditionSystem.condition_changed.connect(_on_condition_changed)
	if DateManager:
		DateManager.day_started.connect(_on_day_started)
	if MatchManager:
		MatchManager.match_ended.connect(_on_match_ended)


func _setup_ui() -> void:
	if has_node("Background"):
		$Background.color = COLOR_BG_PRIMARY


# ============================================
# ìœ„ì ¯ ì—…ë°ì´íŠ¸
# ============================================


func _update_all_widgets() -> void:
	_update_header()
	_update_next_match_widget()
	_update_player_status_widget()
	_update_team_stats_widget()
	_update_quick_actions_widget()


func _update_header() -> void:
	if title_label:
		title_label.text = "ëŒ€ì‹œë³´ë“œ"

	if week_label and DateManager:
		var week = DateManager.current_week if DateManager.has_method("get") else 1
		var year = DateManager.current_year if DateManager.has_method("get") else 1
		week_label.text = "%dë…„ì°¨ %dì£¼ì°¨" % [year, week]


func _update_next_match_widget() -> void:
	"""ë‹¤ìŒ ê²½ê¸° ìœ„ì ¯ ì—…ë°ì´íŠ¸"""
	if not next_match_widget:
		return

	var content = _get_or_create_widget_content(next_match_widget, "ë‹¤ìŒ ê²½ê¸°")

	# ê²½ê¸° ì •ë³´ ê°€ì ¸ì˜¤ê¸°
	var match_info = _get_next_match_info()

	# ë‚´ìš© ìƒì„±
	var info_vbox = VBoxContainer.new()
	info_vbox.add_theme_constant_override("separation", 8)
	content.add_child(info_vbox)

	if match_info.is_empty():
		var no_match = Label.new()
		no_match.text = "ì˜ˆì •ëœ ê²½ê¸° ì—†ìŒ"
		no_match.add_theme_color_override("font_color", COLOR_TEXT_SECONDARY)
		info_vbox.add_child(no_match)
	else:
		# ìƒëŒ€íŒ€
		var opponent_label = Label.new()
		opponent_label.text = "vs %s" % match_info.get("opponent", "Unknown")
		opponent_label.add_theme_font_size_override("font_size", 20)
		opponent_label.add_theme_color_override("font_color", COLOR_TEXT_PRIMARY)
		info_vbox.add_child(opponent_label)

		# ê²½ê¸° ìœ í˜•
		var type_label = Label.new()
		type_label.text = match_info.get("match_type", "ë¦¬ê·¸ì „")
		type_label.add_theme_color_override("font_color", COLOR_TEXT_SECONDARY)
		info_vbox.add_child(type_label)

		# í™ˆ/ì›ì •
		var venue_label = Label.new()
		venue_label.text = "ğŸ  í™ˆ" if match_info.get("is_home", true) else "âœˆï¸ ì›ì •"
		venue_label.add_theme_color_override("font_color", COLOR_ACCENT_SECONDARY)
		info_vbox.add_child(venue_label)


func _update_player_status_widget() -> void:
	"""ì„ ìˆ˜ ìƒíƒœ ìœ„ì ¯ ì—…ë°ì´íŠ¸"""
	if not player_status_widget:
		return

	var content = _get_or_create_widget_content(player_status_widget, "ì„ ìˆ˜ ìƒíƒœ")

	var info_vbox = VBoxContainer.new()
	info_vbox.add_theme_constant_override("separation", 12)
	content.add_child(info_vbox)

	# ì»¨ë””ì…˜
	var condition_row = _create_status_row("ì»¨ë””ì…˜", _get_condition_info())
	info_vbox.add_child(condition_row)

	# ì²´ë ¥/ìŠ¤íƒœë¯¸ë‚˜
	var stamina_row = _create_status_row("ì²´ë ¥", _get_stamina_info())
	info_vbox.add_child(stamina_row)

	# ë™ê¸°ë¶€ì—¬
	var motivation_row = _create_status_row("ë™ê¸°", _get_motivation_info())
	info_vbox.add_child(motivation_row)


func _update_team_stats_widget() -> void:
	"""íŒ€ í†µê³„ ìœ„ì ¯ ì—…ë°ì´íŠ¸"""
	if not team_stats_widget:
		return

	var content = _get_or_create_widget_content(team_stats_widget, "íŒ€ í†µê³„")

	var stats = _get_team_stats()

	var info_vbox = VBoxContainer.new()
	info_vbox.add_theme_constant_override("separation", 8)
	content.add_child(info_vbox)

	# íŒ€ëª…
	var team_label = Label.new()
	team_label.text = stats.get("team_name", "My Team")
	team_label.add_theme_font_size_override("font_size", 18)
	team_label.add_theme_color_override("font_color", COLOR_TEXT_PRIMARY)
	info_vbox.add_child(team_label)

	# ì „ì 
	var record_label = Label.new()
	record_label.text = "%dìŠ¹ %dë¬´ %díŒ¨" % [stats.get("wins", 0), stats.get("draws", 0), stats.get("losses", 0)]
	record_label.add_theme_color_override("font_color", COLOR_TEXT_SECONDARY)
	info_vbox.add_child(record_label)

	# ìŠ¹ë¥ 
	var total = stats.get("total_matches", 0)
	var win_rate = 0.0
	if total > 0:
		win_rate = float(stats.get("wins", 0)) / total * 100

	var winrate_label = Label.new()
	winrate_label.text = "ìŠ¹ë¥ : %.1f%%" % win_rate
	winrate_label.add_theme_color_override(
		"font_color", COLOR_ACCENT_PRIMARY if win_rate >= 50 else COLOR_TEXT_SECONDARY
	)
	info_vbox.add_child(winrate_label)

	# ë¡œìŠ¤í„° ì •ë³´
	var roster_label = Label.new()
	roster_label.text = "ë¡œìŠ¤í„°: %dëª…" % stats.get("roster_size", 0)
	roster_label.add_theme_color_override("font_color", COLOR_TEXT_SECONDARY)
	info_vbox.add_child(roster_label)


func _update_quick_actions_widget() -> void:
	"""ë¹ ë¥¸ ì•¡ì…˜ ìœ„ì ¯ ì—…ë°ì´íŠ¸"""
	if not quick_actions_widget:
		return

	var content = _get_or_create_widget_content(quick_actions_widget, "ë¹ ë¥¸ ì•¡ì…˜")

	var buttons_vbox = VBoxContainer.new()
	buttons_vbox.add_theme_constant_override("separation", 8)
	content.add_child(buttons_vbox)

	# í›ˆë ¨ ì‹¤í–‰ ê°€ëŠ¥ ì—¬ë¶€
	var can_train = true
	if TrainingManager:
		var stats = TrainingManager.get_training_stats()
		can_train = stats.get("personal_trainings_completed", 0) < 3

	# í›ˆë ¨ ë²„íŠ¼
	var train_btn = Button.new()
	train_btn.text = "ğŸ’ª í›ˆë ¨í•˜ê¸°" if can_train else "ğŸ’ª í›ˆë ¨ (í•œë„ ë„ë‹¬)"
	train_btn.custom_minimum_size = Vector2(0, 40)
	train_btn.disabled = not can_train
	train_btn.pressed.connect(_on_training_pressed)
	buttons_vbox.add_child(train_btn)

	# íœ´ì‹ ë²„íŠ¼
	var rest_btn = Button.new()
	rest_btn.text = "ğŸ˜´ íœ´ì‹í•˜ê¸°"
	rest_btn.custom_minimum_size = Vector2(0, 40)
	rest_btn.pressed.connect(_on_rest_pressed)
	buttons_vbox.add_child(rest_btn)

	# ì§„í–‰ ë²„íŠ¼
	var advance_btn = Button.new()
	advance_btn.text = "â­ï¸ ë‹¤ìŒìœ¼ë¡œ"
	advance_btn.custom_minimum_size = Vector2(0, 40)
	advance_btn.pressed.connect(_on_advance_pressed)
	buttons_vbox.add_child(advance_btn)


# ============================================
# ìœ„ì ¯ í—¬í¼
# ============================================


func _get_or_create_widget_content(widget: PanelContainer, title: String) -> Control:
	"""ìœ„ì ¯ ë‚´ìš© ì»¨í…Œì´ë„ˆ ê°€ì ¸ì˜¤ê¸°/ìƒì„±"""
	# ê¸°ì¡´ ë‚´ìš© ì œê±°
	for child in widget.get_children():
		child.queue_free()

	# ë°°ê²½ìƒ‰ ì„¤ì •
	var bg = ColorRect.new()
	bg.color = COLOR_BG_SECONDARY
	bg.set_anchors_preset(Control.PRESET_FULL_RECT)
	widget.add_child(bg)

	# ë©”ì¸ ì»¨í…Œì´ë„ˆ
	var vbox = VBoxContainer.new()
	vbox.set_anchors_preset(Control.PRESET_FULL_RECT)
	vbox.add_theme_constant_override("separation", 12)
	widget.add_child(vbox)

	# ë§ˆì§„
	var margin_top = Control.new()
	margin_top.custom_minimum_size = Vector2(0, 12)
	vbox.add_child(margin_top)

	# ì œëª©
	var title_label = Label.new()
	title_label.text = title
	title_label.add_theme_font_size_override("font_size", 16)
	title_label.add_theme_color_override("font_color", COLOR_TEXT_PRIMARY)
	title_label.horizontal_alignment = HORIZONTAL_ALIGNMENT_CENTER
	vbox.add_child(title_label)

	# êµ¬ë¶„ì„ 
	var separator = HSeparator.new()
	vbox.add_child(separator)

	# ë‚´ìš© ì»¨í…Œì´ë„ˆ
	var content = MarginContainer.new()
	content.add_theme_constant_override("margin_left", 16)
	content.add_theme_constant_override("margin_right", 16)
	content.add_theme_constant_override("margin_bottom", 16)
	content.size_flags_vertical = Control.SIZE_EXPAND_FILL
	vbox.add_child(content)

	return content


func _create_status_row(label_text: String, value_info: Dictionary) -> HBoxContainer:
	"""ìƒíƒœ í–‰ ìƒì„±"""
	var row = HBoxContainer.new()

	var label = Label.new()
	label.text = label_text
	label.add_theme_color_override("font_color", COLOR_TEXT_SECONDARY)
	label.size_flags_horizontal = Control.SIZE_EXPAND_FILL
	row.add_child(label)

	var value = Label.new()
	value.text = value_info.get("text", "-")
	value.add_theme_color_override("font_color", value_info.get("color", COLOR_TEXT_PRIMARY))
	row.add_child(value)

	return row


# ============================================
# ë°ì´í„° ì†ŒìŠ¤
# ============================================


func _get_next_match_info() -> Dictionary:
	"""ë‹¤ìŒ ê²½ê¸° ì •ë³´ ê°€ì ¸ì˜¤ê¸°"""
	# DateManagerì—ì„œ ì£¼ê°„ ê³„íš í™•ì¸
	if DateManager and DateManager.has_method("get_current_weekly_plan"):
		var plan = DateManager.get_current_weekly_plan()
		if plan and plan.has_method("get_match_day"):
			var match_day = plan.get_match_day()
			if match_day:
				return {
					"opponent": match_day.get("opponent", "ìƒëŒ€íŒ€"),
					"match_type": match_day.get("match_type", "ë¦¬ê·¸ì „"),
					"is_home": match_day.get("is_home", true)
				}

	# ê¸°ë³¸ê°’ (ëª©ì—…)
	return {"opponent": "ë¼ì´ë²Œ FC", "match_type": "ë¦¬ê·¸ì „", "is_home": true}


func _get_condition_info() -> Dictionary:
	"""ì»¨ë””ì…˜ ì •ë³´ ê°€ì ¸ì˜¤ê¸°"""
	if ConditionSystem:
		var name = ConditionSystem.get_condition_name()
		var percentage = ConditionSystem.get_condition_percentage()
		return {"text": "%s (%.0f%%)" % [name, percentage], "color": CONDITION_COLORS.get(name, COLOR_TEXT_PRIMARY)}

	return {"text": "ë³´í†µ (75%)", "color": COLOR_TEXT_PRIMARY}


func _get_stamina_info() -> Dictionary:
	"""ì²´ë ¥ ì •ë³´ ê°€ì ¸ì˜¤ê¸°"""
	if DateManager and DateManager.has_method("get_stamina_status"):
		var status = DateManager.get_stamina_status()
		return {"text": status, "color": COLOR_ACCENT_PRIMARY if "ë†’ìŒ" in status else COLOR_TEXT_PRIMARY}

	return {"text": "ì–‘í˜¸", "color": COLOR_TEXT_PRIMARY}


func _get_motivation_info() -> Dictionary:
	"""ë™ê¸°ë¶€ì—¬ ì •ë³´ ê°€ì ¸ì˜¤ê¸°"""
	if ConditionSystem:
		var percentage = ConditionSystem.motivation_percentage
		var level = "ë†’ìŒ" if percentage >= 70 else "ë³´í†µ" if percentage >= 40 else "ë‚®ìŒ"
		return {
			"text": "%s (%.0f%%)" % [level, percentage],
			"color": COLOR_ACCENT_PRIMARY if percentage >= 70 else COLOR_TEXT_PRIMARY
		}

	return {"text": "ë³´í†µ (60%)", "color": COLOR_TEXT_PRIMARY}


func _get_team_stats() -> Dictionary:
	"""íŒ€ í†µê³„ ê°€ì ¸ì˜¤ê¸°"""
	if MyTeamManager:
		return {
			"team_name": MyTeamManager.team_name,
			"wins": MyTeamManager.total_wins,
			"draws": MyTeamManager.total_draws,
			"losses": MyTeamManager.total_losses,
			"total_matches": MyTeamManager.total_matches_played,
			"roster_size": MyTeamManager.first_team.size() + MyTeamManager.reserves.size()
		}

	return {"team_name": "My Team", "wins": 0, "draws": 0, "losses": 0, "total_matches": 0, "roster_size": 11}


# ============================================
# ì´ë²¤íŠ¸ í•¸ë“¤ëŸ¬
# ============================================


func _on_training_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/screens/TrainingScreen.tscn")


func _on_match_pressed() -> void:
	print("[DashboardScreen] Match button pressed")
	# TODO: ê²½ê¸° í™”ë©´ìœ¼ë¡œ ì´ë™


func _on_gacha_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/screens/GachaScreen.tscn")


func _on_tactics_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/screens/TacticsScreen.tscn")


func _on_rest_pressed() -> void:
	if TrainingManager:
		var result = await TrainingManager.perform_rest_activity()
		if result.get("success", false):
			_update_player_status_widget()
			print("[DashboardScreen] Rest completed")


func _on_advance_pressed() -> void:
	print("[DashboardScreen] Advance button pressed")
	# TODO: ë‹¤ìŒ í„´ìœ¼ë¡œ ì§„í–‰


func _on_condition_changed(_level, _percentage) -> void:
	_update_player_status_widget()


func _on_day_started(_day_info: Dictionary) -> void:
	_update_all_widgets()


func _on_match_ended(_result: Dictionary) -> void:
	_update_team_stats_widget()
	_update_next_match_widget()


# ============================================
# ì™¸ë¶€ API
# ============================================


func refresh() -> void:
	"""ëŒ€ì‹œë³´ë“œ ìƒˆë¡œê³ ì¹¨"""
	_update_all_widgets()


func _add_navigation_bar() -> void:
	"""í•˜ë‹¨ ë„¤ë¹„ê²Œì´ì…˜ ë°” ì¶”ê°€"""
	if MainNavBarScene:
		var navbar = MainNavBarScene.instantiate()
		add_child(navbar)
		navbar.set_active_tab("dashboard")
